[gd_scene load_steps=10 format=2]

[ext_resource path="res://graphics/sprite/receptionist.png" type="Texture" id=1]
[ext_resource path="res://font/UI_s.tres" type="DynamicFont" id=2]
[ext_resource path="res://graphics/bg/guild/guildbg.jpg" type="Texture" id=3]
[ext_resource path="res://scene/menu/town/guild/guild.gd" type="Script" id=4]
[ext_resource path="res://scene/menu/town/guild/Join_State.gd" type="Script" id=5]
[ext_resource path="res://font/UI.tres" type="DynamicFont" id=6]
[ext_resource path="res://scene/menu/town/guild/Lbl_Dialogue.gd" type="Script" id=7]
[ext_resource path="res://scene/menu/town/guild/Start_State.gd" type="Script" id=8]
[ext_resource path="res://scene/component/loading_screen/loading_screen.tscn" type="PackedScene" id=9]

[node name="Guild" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cpn_Loading" parent="." instance=ExtResource( 9 )]

[node name="HTTPRequest" type="Node" parent="."]

[node name="HR_GetGuild" type="HTTPRequest" parent="HTTPRequest"]

[node name="Bg_Guild" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1.90584, 1.90584 )
texture = ExtResource( 3 )

[node name="Spr_Receptionist" type="Sprite" parent="."]
position = Vector2( 912.436, 560.821 )
scale = Vector2( 0.651654, 0.651654 )
texture = ExtResource( 1 )

[node name="Pnl_Dialogue" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.882353 )
margin_left = 80.0
margin_top = 480.0
margin_right = 1200.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl_Dialogue" type="Label" parent="Pnl_Dialogue"]
margin_left = 50.0
margin_top = 30.0
margin_right = 1080.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 2 )
text = "dialogue text"
autowrap = true
clip_text = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_State" type="Control" parent="."]
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Join" type="Button" parent="Start_State"]
margin_left = 80.0
margin_top = 120.0
margin_right = 720.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 230, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Join Guild"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Select" type="Button" parent="Start_State"]
margin_left = 80.0
margin_top = 230.0
margin_right = 720.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 230, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Previously Joined Guild"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Leave" type="Button" parent="Start_State"]
margin_left = 80.0
margin_top = 340.0
margin_right = 720.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 230, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_State" type="Control" parent="."]
visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pnl_InviteCode" type="Panel" parent="Join_State"]
margin_left = 80.0
margin_top = 130.0
margin_right = 720.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LE_InviteCode" type="LineEdit" parent="Join_State/Pnl_InviteCode"]
margin_left = 130.0
margin_top = 60.0
margin_right = 510.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 6 )
align = 1
max_length = 6
placeholder_text = "Code"
caret_blink = true

[node name="Btn_ICDone" type="Button" parent="Join_State/Pnl_InviteCode"]
margin_left = 340.0
margin_top = 200.0
margin_right = 550.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_ICBack" type="Button" parent="Join_State/Pnl_InviteCode"]
margin_left = 90.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
[connection signal="button_up" from="Start_State/Btn_Join" to="." method="_on_Btn_Join_button_up"]
[connection signal="button_up" from="Start_State/Btn_Select" to="." method="_on_Btn_Select_button_up"]
[connection signal="button_up" from="Start_State/Btn_Leave" to="." method="_on_Btn_Leave_button_up"]
[connection signal="button_up" from="Join_State/Pnl_InviteCode/Btn_ICDone" to="." method="_on_Btn_ICDone_button_up"]
[connection signal="button_up" from="Join_State/Pnl_InviteCode/Btn_ICBack" to="." method="_on_Btn_Back_button_up"]
